--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="panel right-panel">
-            <h2>Moral Dilemma: Class Alignment Matrix</h2>
+            <h2>Moral Dilemma: Class 4A Alignment Matrix</h2>
             <p>This chart anonymously maps the underlying philosophies driving our class's decisions.</p>
             
             <div class="chart-container">
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
